# polkadot-decentralized-voting

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/proposals/: Cargo.toml
pallets/proposals/src/: lib.rs  mock.rs  tests.rs  types.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
